# HPN-VPN

./: .gitignore  Cargo.toml  Cross.toml  README.md  package.json  rustfmt.toml  stress_test.sh
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  fuzzing.yml  release.yml
config/: client.example.toml  relay.example.toml  server.example.toml
crates/hpn-afxdp/: Cargo.toml
crates/hpn-afxdp/src/: datapath.rs  error.rs  lib.rs  metrics.rs  ring.rs  socket.rs  sys.rs  umem.rs  xdp_program.rs
crates/hpn-client-core/: Cargo.toml
crates/hpn-client-core/src/: buffer_pool.rs  client.rs  config.rs  connection.rs  error.rs  ipc.rs  kill_switch.rs  lib.rs  nat.rs  stats.rs  transport.rs  tunnel.rs
crates/hpn-client-macos/: Cargo.toml
crates/hpn-client-macos/src/: adapter.rs  dns.rs  error.rs  lib.rs  power.rs  recovery.rs  routing.rs
crates/hpn-client-windows/: Cargo.toml
crates/hpn-client-windows/src/: adapter.rs  error.rs  lib.rs  recovery.rs  routing.rs  windows_api.rs
crates/hpn-core/: Cargo.toml
crates/hpn-core/benches/: crypto_benchmark.rs  protocol_benchmark.rs
crates/hpn-core/proptest-regressions/protocol/: session.txt
crates/hpn-core/src/: error.rs  lib.rs  perf.rs  provider_envelope.rs  types.rs
crates/hpn-core/src/crypto/: aead.rs  kdf.rs  kem.rs  keys.rs  mod.rs  pki.rs  signature.rs
crates/hpn-core/src/protocol/: codec.rs  fragment.rs  handshake.rs  header.rs  messages.rs  mod.rs  session.rs
crates/hpn-core/tests/: integration_test.rs
crates/hpn-relay/: Cargo.toml
crates/hpn-relay/src/: batch_io.rs  config.rs  error.rs  lib.rs  log_file.rs  main.rs  metrics.rs  privacy.rs  relay.rs  session.rs
crates/hpn-server/: Cargo.toml
crates/hpn-server/benches/: data_plane.rs
crates/hpn-server/src/: admin.rs  afxdp_workers.rs  auth_lockout.rs  auto_tune.rs  config.rs  error.rs  handshake_replay.rs  io_uring_udp.rs  lib.rs  log_file.rs  main.rs  metrics.rs  nat.rs  privacy.rs  privileges.rs  rate_limit.rs  routing.rs  server.rs  session_manager.rs  socket_opts.rs  syscall_batch.rs  tun.rs  tun_multiqueue.rs  tun_workers.rs  udp_workers.rs  user_store.rs  validation.rs
crates/hpn-server/tests/: integration_tests.rs
crates/hpn-tunnel-ext/: Cargo.toml
crates/hpn-tunnel-ext/src/: lib.rs
crates/hpn-ui-macos/native/: VPNManager.swift
crates/hpn-ui-macos/src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
crates/hpn-ui-macos/src-tauri/capabilities/: default.json
crates/hpn-ui-macos/src-tauri/icons/: icon.icns
crates/hpn-ui-macos/src-tauri/src/: commands.rs  config.rs  error.rs  keychain.rs  main.rs  native_vpn.rs  state.rs  updater.rs  validation.rs
crates/hpn-ui-macos/src-tauri/src/commands/: connection.rs  profiles.rs
crates/hpn-ui-macos/ui/: index.html  metadata.json  package.json
crates/hpn-ui-macos/ui/src/: App.tsx  i18n.ts  index.tsx  ipc-contract.test.ts  styles.css
crates/hpn-ui-macos/ui/src/components/: ErrorBoundary.tsx  LoginModal.tsx  ProfileEditor.tsx  ProfilesPage.tsx  SettingsPage.tsx  UIComponents.tsx  UpdateAvailableModal.tsx
crates/hpn-ui-macos/xcode-native/macos/macos/: macos.entitlements
crates/hpn-ui-macos/xcode-native/macos/macos.xcodeproj/: project.pbxproj
crates/hpn-ui-macos/xcode-native/macos/macos.xcodeproj/xcshareddata/xcschemes/: packet-tunnel.xcscheme
crates/hpn-ui-macos/xcode-native/macos/packet-tunnel/: Info.plist  PacketTunnelProvider.swift  main.swift  packet_tunnel.entitlements
crates/hpn-ui-windows/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/hpn-ui-windows/src-tauri/capabilities/: default.json
crates/hpn-ui-windows/src-tauri/icons/: icon.icns
crates/hpn-ui-windows/src-tauri/src/: commands.rs  config.rs  dpapi.rs  main.rs  state.rs  updater.rs  validation.rs
crates/hpn-ui-windows/src-tauri/src/commands/: connection.rs  logs.rs  profiles.rs  settings.rs
crates/hpn-ui-windows/ui/: package.json  tailwind.config.js
crates/hpn-ui-windows/ui/src/: App.tsx  i18n.ts  ipc-contract.test.ts  types.ts  updater.test.ts
crates/hpn-ui-windows/ui/src/components/: AppShell.tsx  ConnectionPage.tsx  LogsPage.tsx  ProfileEditor.tsx  UIComponents.tsx
deploy/: build-packages.sh  install.sh  load-test.sh  macos-dev-test.sh  macos-diagnose-split-tunnel.sh  macos-notarize.sh  macos-release.sh  macos-verify-fix-deployed.sh  package.sh  publish-repo.sh  release.sh  sign-windows.bat  sign-windows.ps1  upload-packages.sh
deploy/installer-assets/: LICENSE.rtf  license.html
deploy/packaging/config/: relay.toml.example  server.toml.example
deploy/packaging/scripts/: hpn-relay.postinst  hpn-relay.postrm  hpn-relay.prerm  hpn-server.postinst  hpn-server.postrm  hpn-server.prerm
deploy/packaging/systemd/: hpn-relay.service  hpn-server.service
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_control_message.rs  fuzz_cookie.rs  fuzz_handshake_init.rs  fuzz_handshake_response.rs  fuzz_header.rs  fuzz_keepalive.rs  fuzz_rekey_message.rs  fuzz_rekey_response.rs  fuzz_tunnel_config.rs
tests/: integration_windows_locale.rs
