[package]
name = "hpn-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
hpn-core = { path = "../crates/hpn-core" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_header"
path = "fuzz_targets/fuzz_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_handshake_init"
path = "fuzz_targets/fuzz_handshake_init.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_handshake_response"
path = "fuzz_targets/fuzz_handshake_response.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_control_message"
path = "fuzz_targets/fuzz_control_message.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tunnel_config"
path = "fuzz_targets/fuzz_tunnel_config.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rekey_message"
path = "fuzz_targets/fuzz_rekey_message.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rekey_response"
path = "fuzz_targets/fuzz_rekey_response.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_keepalive"
path = "fuzz_targets/fuzz_keepalive.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_cookie"
path = "fuzz_targets/fuzz_cookie.rs"
test = false
doc = false
bench = false
