[package]
name = "hpn-client-core"
description = "HPN VPN client core - platform-agnostic client logic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
hpn-core = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
parking_lot = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
socket2 = { workspace = true }
crossbeam-channel = { workspace = true }
bytes = { workspace = true }
zeroize = { workspace = true }

# Cryptography (SHA-256 for TLS cert pin comparison, constant-time
# digest equality via subtle). `ring` is already pulled transitively
# through tokio-rustls; declaring it explicitly lets `transport.rs`
# call into the digest primitives without an undeclared-crate compile
# error.
ring = { workspace = true }
subtle = { workspace = true }

# TLS for TCP/443 fallback (DPI resistance)
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }

[lints]
workspace = true
