[package]
name = "hpn-relay"
version.workspace = true
edition.workspace = true
description = "HPN VPN relay server for multi-hop routing"
license.workspace = true
publish = false

[features]
default = []
# Compile and expose the experimental high-throughput batch data plane
# (recvmmsg/sendmmsg, two dedicated OS threads, no tokio in the hot path).
# Off by default — see `src/relay.rs::spawn_batch_data_plane` for the
# rationale and integration TODOs (M-8 in the relay audit:
# `RelayServer::run` does NOT spawn this path automatically yet, so the
# operator opts in by enabling the feature AND wiring it into a custom
# main; treat this as "code is here, integration tests pending").
batch-io = []

[dependencies]
hpn-core = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
clap = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

# `mimalloc` global allocator (Linux + macOS). Same rationale as
# `hpn-server` — the relay's data plane allocates a fresh response
# buffer per handshake and the tokio-based forwarding path goes through
# the global allocator on every `Bytes::copy_from_slice`; mimalloc's
# per-thread arenas typically buy +10-25 % throughput under high
# session-creation rates. `default-features = false` keeps mimalloc
# from overriding the system malloc symbols; we opt in explicitly via
# `#[global_allocator]` in `main.rs`.
[target.'cfg(target_os = "linux")'.dependencies.mimalloc]
version = "0.1"
default-features = false

[target.'cfg(target_os = "macos")'.dependencies.mimalloc]
version = "0.1"
default-features = false

[lib]
name = "hpn_relay"
path = "src/lib.rs"

[[bin]]
name = "hpn-relay"
path = "src/main.rs"
